disabled scaling on mobile with a meta tag which seems to have fixed all the problems

--- a/web/election_map.css
+++ b/web/election_map.css
@@ -1,5 +1,4 @@
-
-html, body { 
+html, body {
   overflow: hidden; 
   height: 100%;
 }
@@ -17,7 +16,7 @@ body {
 
 .tooltip {
   opacity: 0.9;
-  font-size: 12px;
+  font-size:16px;
   width: 355px;
   height: 110px;
   background-color: white;
@@ -34,7 +33,7 @@ body {
 
 .prediction-table {
   margin: 0 auto;
-  width: 90%;
+  /*width: 90%;*/
 }
 
 .tail {
